--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".view.ProfileActivity"></activity>
         <activity android:name=".view.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
-        </activity>
-        <!-- android:name="android.support.multidex.MultiDexApplication"> -->
+        </activity> <!-- android:name="android.support.multidex.MultiDexApplication"> -->
         <activity android:name=".view.RegisterActivity" /> <!-- <activity -->
         <!-- android:name=".ui.login.RegisterActivity" -->
         <!-- android:label="@string/title_activity_register" /> -->
@@ -47,9 +45,7 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.loginActivity">
-
-        </activity>
+        <activity android:name=".view.loginActivity"></activity>
         <activity android:name=".view.HomeActivity" />
     </application>
 
